14169 re-fixing tab titles
Not sure how these got jacked out of place but now they should be good.

--- a/assets/css/_windowTitleBar.css
+++ b/assets/css/_windowTitleBar.css
@@ -327,6 +327,7 @@ html.desktop-active .fsbl-icon-highlighted {
 
 .fsbl-tab-title {
     text-align: left;
+    padding-left: 1px;
     min-width: 0;
     overflow: hidden;
     white-space: nowrap;
