--- a/src-built-in/components/toolbar/toolbar.css
+++ b/src-built-in/components/toolbar/toolbar.css
@@ -169,4 +169,5 @@ div {
 
 .overflow .ff-chevron-down {
     padding-left: 0;
+    padding-right: 1px;
 }
